# learning-opengl

./: CMakeLists.txt  README.md  cmake_install.cmake
assets/shaders/: triangle_fs.glsl
examples/: main.cpp
include/: Application.h  Shader.h
src/: Application.cpp  Shader.cpp  main.cpp
